sidebar component z-index issue

--- a/web-client/src/components/Plate/Plate.scss
+++ b/web-client/src/components/Plate/Plate.scss
@@ -37,7 +37,7 @@
 	}
 
 	&.sidebar-graph {
-		width: rem(1004px);
+		width: rem(948px);
 		left: rem(-928px);
 
 		.sidebar-handle {
